[package]
name = "veedoom"
version = "0.1.0"
authors = ["anonymous <anonymous>"]
edition = "2018"

[lib]
name = "veedoom"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"


# [lib]
# crate-type = ["cdylib", "rlib"]
# 
[dependencies]

# js-sys = "0.3"
# wasm-bindgen = "0.2"
# 
# [dependencies.web-sys]
# version = "0.3.4"
# features = [
#   'Document',
#   'DocumentFragment',
#   'Element',
#   'HtmlCollection',
#   'HtmlElement',
#   'Node',
#   'Text',
#   'Window',
# ]
