[package]
name = "veedoom"
version = "0.1.0"
authors = ["anonymous <anonymous>"]
edition = "2018"

[lib]
name = "veedoom"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
js-sys = "0.3"
serde = "^1.0.59"
serde_derive = "^1.0.59"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.4"
#features = [
#  'CustomEvent',
#  'CustomEventInit',
#  'Document',
#  'Event',
#  'EventTarget',
#  'HtmlElement',
#  'Window',
#]
